--- a/Customer_Segment_Analysis.ipynb
+++ b/Customer_Segment_Analysis.ipynb
@@ -24,19 +24,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Data Preprocessing [5 marks]:\n",
-    "\n",
-    "- Clean and prepare the data. Remember to treat data issues, perform feature scaling, encoding and any other relevant transformations.\n",
-    "\n",
-    "- If applicable, use dimensionality reduction and discuss how it impacts the clusters.\n",
-    " \n",
-    "- Explain your data preparation process.    \n",
-    "\n",
-    "# Exploratory Data Analysis (EDA) [5 marks]:\n",
-    "\n",
-    "- Perform an EDA to understand the data and identify patterns that could inform the clustering.\n",
-    "\n",
-    "- Explain your findings."
+    "# Data Preprocessing"
    ]
   },
   {
@@ -4889,11 +4877,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Clustering Algorithms [10 marks]:\n",
-    "\n",
-    "- Implement at least three different clustering algorithms of your choice (e.g., K-Means, Hierarchical, DBSCAN). You can try any algorithms available in sklearn.\n",
-    "- Use Elbow method, Silhouette analysis, or other techniques to determine the optimal number of clusters.\n",
-    "- Discuss each method, and select the most appropriate"
+    "# Clustering Algorithms"
    ]
   },
   {
@@ -5393,9 +5377,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Interpreting Clusters [5 marks]:\n",
-    "\n",
-    "- Characterize the clusters formed: What kind of customers fall into each cluster? What features are most significant in distinguishing between clusters?"
+    "# Interpreting Clusters"
    ]
   },
   {
@@ -5798,7 +5780,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Actionable Insights [5 marks]:\n",
+    "# Actionable Insights\n",
     "\n",
     "- Provide business recommendations based on the clusters formed. How would you target different customer segments?\n",
     "\n",
@@ -5848,13 +5830,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#  Data Preprocessing [5 marks]:\n",
-    "\n",
-    "- Clean and prepare the data. Remember to treat data issues, perform feature scaling, encoding and any other relevant transformations.\n",
-    "\n",
-    "- If applicable, use dimensionality reduction and discuss how it impacts the clusters.\n",
-    " \n",
-    "- Explain your data preparation process.   \n",
+    "#  Data Preprocessing\n",
     "\n",
     "#### Data Cleaning & Preparation:\n",
     "\n",
@@ -5876,11 +5852,8 @@
     "\n",
     "On the other hand, Reducing the dimensionality of the dataset can significantly speed up the clustering process, especially for algorithms that rely on distance measurements, like K-means. This is because calculating distances in lower-dimensional spaces is generally faster. By focusing on the most important dimensions (principal components), the impact of noise or irrelevant features on clustering can be reduced.\n",
     "\n",
-    "# Exploratory Data Analysis (EDA) [5 marks]:\n",
+    "# Exploratory Data Analysis (EDA) \n",
     "\n",
-    "- Perform an EDA to understand the data and identify patterns that could inform the clustering.\n",
-    "\n",
-    "- Explain your findings.\n",
     "\n",
     "#### Findings\n",
     "\n",
@@ -5933,11 +5906,7 @@
     "\n",
     "5. Credit Limit & Tenure: Those with credit limits between $50-$6500, and tenure less than 12 years. These customers might be in the early stages of their credit journey. Those with a tenure of 12 years. They are probably the most loyal and might be open to upselling or cross-selling financial products.\n",
     "\n",
-    "# Clustering Algorithms [10 marks]:\n",
-    "\n",
-    "- Implement at least three different clustering algorithms of your choice (e.g., K-Means, Hierarchical, DBSCAN). You can try any algorithms available in sklearn.\n",
-    "- Use Elbow method, Silhouette analysis, or other techniques to determine the optimal number of clusters.\n",
-    "- Discuss each method, and select the most appropriate\n",
+    "# Clustering Algorithms \n",
     "\n",
     "#### KMeans Clustering: Elbow Method & Silhouette Score\n",
     "\n",
@@ -5975,17 +5944,13 @@
     "\n",
     "The banking industry pay more attention to the majority of customers instead of outliers, thus KMeans is a better choice comparing with DBSCAN. As of hierarchical clustering with ward linkage, Kmeans has a slightly higher silhouette score. Thus, we decide to use KMeans clustering.\n",
     "\n",
-    "# Interpreting Clusters [5 marks]:\n",
-    "\n",
-    "- Characterize the clusters formed: What kind of customers fall into each cluster? What features are most significant in distinguishing between clusters?\n",
+    "# Interpreting Clusters\n",
     "\n",
     "Cluster 0 customers are: Moderate Users with High Cash Advances, as they maintain higher average bof balance. Their overall purchase amount is low, especially when compared to Cluster 1. They have a notably high average cash advance amount and their average payment is comparatively lower. They purchase less frequently. Their credit limit is slightly lower than Cluster 1 but not by a significant margin.\n",
     " \n",
     "Cluster 1 customers are: Active Shoppers, as they have significantly higher average total purchases amount, with a good mix of one-off and installment purchases and a high frequency of purchases. They have a slightly higher credit limit than Cluster 0. And their average payment is considerably higher than Cluster 0.\n",
     "\n",
-    "# Actionable Insights [5 marks]:\n",
-    "\n",
-    "- Provide business recommendations based on the clusters formed. How would you target different customer segments?\n",
+    "# Actionable Insights\n",
     "\n",
     "1. Cluster 0 comprises customers who frequently utilize their credit cards for cash advances and maintain a higher balance. They are less active in terms of actual purchasing.\n",
     "\n",
